# sync-daddy

./: .env.skel  Makefile  README.md  pyproject.toml
sync_daddy/: main.py
sync_daddy/config/: local.yaml
sync_daddy/services/: apple.py  config_service.py  factories.py  spotify.py
